T1B2 - Syntactic/ParserBC.java
/* Generated By:JavaCC: Do not edit this line. ParserBC.java */
public class ParserBC implements ParserBCConstants {

  public  static void main(String args[])
  {


      try
      {
        ParserBC parser = new ParserBC (System.in);
        parser.bc();
        System.out.println("SUCESSO");
      }
      catch (Throwable e)
      {
        System.out.println(e.getMessage());
      }
  }

/*Análise léxica*/
  static final public void bc() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO_VIRGULA:
      case SEPARADOR:
      case ABRE_PARENTESES:
      case ASPAS_DUPLAS:
      case NEGACAO:
      case SUBTRACAO:
      case INCREMENTO:
      case DECREMENTO:
      case PONTO:
      case IF:
      case WHILE:
      case FOR:
      case BREAK:
      case CONTINUE:
      case QUIT:
      case PRINT:
      case RAIZ_QUADRADA:
      case TAMANHO:
      case ESCALA:
      case IBASE:
      case OBASE:
      case LAST:
      case RETORNO:
      case ID:
      case INTEIRO:
      case REAL:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 74:
        comando_composto();
        break;
      case DEFINICAO:
        definicao_de_funcao();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO_VIRGULA:
      case SEPARADOR:
      case DEFINICAO:
      case ABRE_PARENTESES:
      case ASPAS_DUPLAS:
      case NEGACAO:
      case SUBTRACAO:
      case INCREMENTO:
      case DECREMENTO:
      case PONTO:
      case IF:
      case WHILE:
      case FOR:
      case BREAK:
      case CONTINUE:
      case QUIT:
      case PRINT:
      case RAIZ_QUADRADA:
      case TAMANHO:
      case ESCALA:
      case IBASE:
      case OBASE:
      case LAST:
      case RETORNO:
      case ID:
      case INTEIRO:
      case REAL:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 74:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  static final public void comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_PARENTESES:
    case NEGACAO:
    case SUBTRACAO:
    case INCREMENTO:
    case DECREMENTO:
    case PONTO:
    case RAIZ_QUADRADA:
    case TAMANHO:
    case ESCALA:
    case IBASE:
    case OBASE:
    case LAST:
    case ID:
    case INTEIRO:
    case REAL:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 74:
      e();
      break;
    case IF:
      cIf();
      break;
    case WHILE:
      cWhile();
      break;
    case FOR:
      cFor();
      break;
    case PONTO_VIRGULA:
    case SEPARADOR:
      cNull();
      break;
    case BREAK:
      cBreak();
      break;
    case CONTINUE:
      cContinue();
      break;
    case QUIT:
      cQuit();
      break;
    case PRINT:
      cPrint();
      break;
    case ASPAS_DUPLAS:
      cString();
      break;
    case RETORNO:
      cReturn();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void comando_composto() throws ParseException {
    lista_comandos();
  }

  static final public void lista_comandos() throws ParseException {
    comando();
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PONTO_VIRGULA:
      case SEPARADOR:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEPARADOR:
          jj_consume_token(SEPARADOR);
          break;
        case PONTO_VIRGULA:
          jj_consume_token(PONTO_VIRGULA);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      comando();
    }
  }

  static final public void cIf() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(ABRE_PARENTESES);
    e();
    jj_consume_token(FECHA_PARENTESES);
    jj_consume_token(ABRE_CHAVES);
    comando_composto();
    jj_consume_token(FECHA_CHAVES);
    if (jj_2_2(2)) {
      jj_consume_token(ELSE);
      jj_consume_token(ABRE_CHAVES);
      comando_composto();
      jj_consume_token(FECHA_CHAVES);
    } else {
      ;
    }
  }

  static final public void cWhile() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(ABRE_PARENTESES);
    e();
    jj_consume_token(FECHA_PARENTESES);
    jj_consume_token(ABRE_CHAVES);
    comando_composto();
    jj_consume_token(FECHA_CHAVES);
  }

  static final public void cFor() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(ABRE_PARENTESES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_PARENTESES:
    case NEGACAO:
    case SUBTRACAO:
    case INCREMENTO:
    case DECREMENTO:
    case PONTO:
    case RAIZ_QUADRADA:
    case TAMANHO:
    case ESCALA:
    case IBASE:
    case OBASE:
    case LAST:
    case ID:
    case INTEIRO:
    case REAL:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 74:
      e();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_VIRGULA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_PARENTESES:
    case NEGACAO:
    case SUBTRACAO:
    case INCREMENTO:
    case DECREMENTO:
    case PONTO:
    case RAIZ_QUADRADA:
    case TAMANHO:
    case ESCALA:
    case IBASE:
    case OBASE:
    case LAST:
    case ID:
    case INTEIRO:
    case REAL:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 74:
      e();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(PONTO_VIRGULA);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_PARENTESES:
    case NEGACAO:
    case SUBTRACAO:
    case INCREMENTO:
    case DECREMENTO:
    case PONTO:
    case RAIZ_QUADRADA:
    case TAMANHO:
    case ESCALA:
    case IBASE:
    case OBASE:
    case LAST:
    case ID:
    case INTEIRO:
    case REAL:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 74:
      e();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESES);
    jj_consume_token(ABRE_CHAVES);
    comando_composto();
    jj_consume_token(FECHA_CHAVES);
  }

  static final public void cNull() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEPARADOR:
      jj_consume_token(SEPARADOR);
      break;
    case PONTO_VIRGULA:
      jj_consume_token(PONTO_VIRGULA);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void cBreak() throws ParseException {
    jj_consume_token(BREAK);
  }

  static final public void cContinue() throws ParseException {
    jj_consume_token(CONTINUE);
  }

  static final public void cQuit() throws ParseException {
    jj_consume_token(QUIT);
  }

  static final public void cPrint() throws ParseException {
    jj_consume_token(PRINT);
    lista_expressoes();
  }

  static final public void lista_expressoes() throws ParseException {
    e();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(VIRGULA);
      e();
    }
  }

  static final public void cString() throws ParseException {
    jj_consume_token(ASPAS_DUPLAS);
  }

  static final public void cReturn() throws ParseException {
    jj_consume_token(RETORNO);
    if (jj_2_3(2)) {
      e();
    } else {
      ;
    }
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEPARADOR:
        jj_consume_token(SEPARADOR);
        break;
      case PONTO_VIRGULA:
        jj_consume_token(PONTO_VIRGULA);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  static final public void e() throws ParseException {
    e1();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OU_LOGICO:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(OU_LOGICO);
      e1();
    }
  }

  static final public void e1() throws ParseException {
    e2();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case E_LOGICO:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(E_LOGICO);
      e2();
    }
  }

  static final public void e2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGACAO:
      jj_consume_token(NEGACAO);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    e3();
  }

  static final public void e3() throws ParseException {
    e4();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
    case MENOR_IGUAL:
    case MAIOR_IGUAL:
    case DIFERENTE:
    case MENOR:
    case MAIOR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IGUAL:
        jj_consume_token(IGUAL);
        break;
      case MENOR_IGUAL:
        jj_consume_token(MENOR_IGUAL);
        break;
      case MAIOR_IGUAL:
        jj_consume_token(MAIOR_IGUAL);
        break;
      case DIFERENTE:
        jj_consume_token(DIFERENTE);
        break;
      case MENOR:
        jj_consume_token(MENOR);
        break;
      case MAIOR:
        jj_consume_token(MAIOR);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e4();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void e4() throws ParseException {
    if (jj_2_5(3)) {
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_COLCHETE:
        jj_consume_token(ABRE_COLCHETE);
        e();
        jj_consume_token(FECHA_COLCHETE);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUI:
        jj_consume_token(ATRIBUI);
        break;
      case ATRIBUI_SOMANDO:
        jj_consume_token(ATRIBUI_SOMANDO);
        break;
      case ATRIBUI_SUBTRAINDO:
        jj_consume_token(ATRIBUI_SUBTRAINDO);
        break;
      case ATRIBUI_MULTIPLICANDO:
        jj_consume_token(ATRIBUI_MULTIPLICANDO);
        break;
      case ATRIBUI_DIVINDO:
        jj_consume_token(ATRIBUI_DIVINDO);
        break;
      case ATRIBUI_RESTO:
        jj_consume_token(ATRIBUI_RESTO);
        break;
      case ATRIBUI_POTENCIA:
        jj_consume_token(ATRIBUI_POTENCIA);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e4();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_PARENTESES:
      case SUBTRACAO:
      case INCREMENTO:
      case DECREMENTO:
      case PONTO:
      case RAIZ_QUADRADA:
      case TAMANHO:
      case ESCALA:
      case IBASE:
      case OBASE:
      case LAST:
      case ID:
      case INTEIRO:
      case REAL:
      case 69:
      case 70:
      case 71:
      case 72:
      case 73:
      case 74:
        e5();
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void e5() throws ParseException {
    e6();
    label_6:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SOMA:
        jj_consume_token(SOMA);
        break;
      case SUBTRACAO:
        jj_consume_token(SUBTRACAO);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e6();
    }
  }

  static final public void e6() throws ParseException {
    e7();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
      case DIVISAO:
      case RESTO:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        jj_consume_token(MULTIPLICACAO);
        break;
      case DIVISAO:
        jj_consume_token(DIVISAO);
        break;
      case RESTO:
        jj_consume_token(RESTO);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e7();
    }
  }

  static final public void e7() throws ParseException {
    e8();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POTENCIA:
      jj_consume_token(POTENCIA);
      e7();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  static final public void e8() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBTRACAO:
      jj_consume_token(SUBTRACAO);
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    e9();
  }

  static final public void e9() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENTO:
    case DECREMENTO:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INCREMENTO:
        jj_consume_token(INCREMENTO);
        break;
      case DECREMENTO:
        jj_consume_token(DECREMENTO);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_COLCHETE:
        jj_consume_token(ABRE_COLCHETE);
        e();
        jj_consume_token(FECHA_COLCHETE);
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[28] = jj_gen;
      if (jj_2_7(3)) {
        jj_consume_token(ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABRE_COLCHETE:
          jj_consume_token(ABRE_COLCHETE);
          e();
          jj_consume_token(FECHA_COLCHETE);
          break;
        default:
          jj_la1[26] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INCREMENTO:
          jj_consume_token(INCREMENTO);
          break;
        case DECREMENTO:
          jj_consume_token(DECREMENTO);
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ABRE_PARENTESES:
        case PONTO:
        case RAIZ_QUADRADA:
        case TAMANHO:
        case ESCALA:
        case IBASE:
        case OBASE:
        case LAST:
        case ID:
        case INTEIRO:
        case REAL:
        case 69:
        case 70:
        case 71:
        case 72:
        case 73:
        case 74:
          e10();
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void e10() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEIRO:
      jj_consume_token(INTEIRO);
      break;
    case REAL:
      jj_consume_token(REAL);
      break;
    case ABRE_PARENTESES:
      jj_consume_token(ABRE_PARENTESES);
      e();
      jj_consume_token(FECHA_PARENTESES);
      break;
    case RAIZ_QUADRADA:
      jj_consume_token(RAIZ_QUADRADA);
      jj_consume_token(ABRE_PARENTESES);
      e();
      jj_consume_token(FECHA_PARENTESES);
      break;
    case TAMANHO:
      jj_consume_token(TAMANHO);
      jj_consume_token(ABRE_PARENTESES);
      e();
      jj_consume_token(FECHA_PARENTESES);
      break;
    default:
      jj_la1[31] = jj_gen;
      if (jj_2_8(2)) {
        jj_consume_token(ESCALA);
        jj_consume_token(ABRE_PARENTESES);
        e();
        jj_consume_token(FECHA_PARENTESES);
      } else if (jj_2_9(2)) {
        chamada_funcao();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          jj_consume_token(ID);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ABRE_COLCHETE:
            jj_consume_token(ABRE_COLCHETE);
            e();
            jj_consume_token(FECHA_COLCHETE);
            break;
          default:
            jj_la1[30] = jj_gen;
            ;
          }
          break;
        case IBASE:
          jj_consume_token(IBASE);
          break;
        case OBASE:
          jj_consume_token(OBASE);
          break;
        case ESCALA:
          jj_consume_token(ESCALA);
          break;
        case LAST:
          jj_consume_token(LAST);
          break;
        case PONTO:
          jj_consume_token(PONTO);
          break;
        case 69:
          jj_consume_token(69);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        case 70:
          jj_consume_token(70);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        case 71:
          jj_consume_token(71);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        case 72:
          jj_consume_token(72);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        case 73:
          jj_consume_token(73);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        case 74:
          jj_consume_token(74);
          jj_consume_token(ABRE_PARENTESES);
          e();
          jj_consume_token(VIRGULA);
          e();
          jj_consume_token(FECHA_PARENTESES);
          break;
        default:
          jj_la1[32] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void chamada_funcao() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(ABRE_PARENTESES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_PARENTESES:
    case NEGACAO:
    case SUBTRACAO:
    case INCREMENTO:
    case DECREMENTO:
    case PONTO:
    case RAIZ_QUADRADA:
    case TAMANHO:
    case ESCALA:
    case IBASE:
    case OBASE:
    case LAST:
    case ID:
    case INTEIRO:
    case REAL:
    case 69:
    case 70:
    case 71:
    case 72:
    case 73:
    case 74:
      lista_expressoes();
      break;
    default:
      jj_la1[33] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESES);
  }

  static final public void definicao_de_funcao() throws ParseException {
    jj_consume_token(DEFINICAO);
    jj_consume_token(ID);
    jj_consume_token(ABRE_PARENTESES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      lista_var();
      break;
    default:
      jj_la1[34] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESES);
    jj_consume_token(ABRE_CHAVES);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AUTO:
      jj_consume_token(AUTO);
      lista_var();
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
    lista_comandos();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETORNO:
      cReturn();
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_CHAVES);
  }

  static final public void lista_var() throws ParseException {
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ABRE_COLCHETE:
      jj_consume_token(ABRE_COLCHETE);
      jj_consume_token(FECHA_COLCHETE);
      break;
    default:
      jj_la1[37] = jj_gen;
      ;
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_8;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ABRE_COLCHETE:
        jj_consume_token(ABRE_COLCHETE);
        jj_consume_token(FECHA_COLCHETE);
        break;
      default:
        jj_la1[39] = jj_gen;
        ;
      }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }
